RESOLVED FIXED300624
Speculation Rules: non-successful prefetch responses should not be cached
https://bugs.webkit.org/show_bug.cgi?id=300624
Summary Speculation Rules: non-successful prefetch responses should not be cached
Yoav Weiss
Reported 2025-10-13 04:50:19 PDT
The prefetch-status WPT is failing. We should fix that.
Attachments
Yoav Weiss
Comment 1 2025-10-13 04:52:58 PDT
Radar WebKit Bug Importer
Comment 2 2025-10-20 04:51:09 PDT
EWS
Comment 3 2025-11-06 05:54:51 PST
Committed 302649@main (c83dad436f35): <https://commits.webkit.org/302649@main> Reviewed commits have been landed. Closing PR #52236 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.