Speculation Rules: do not cache unsuccessful responses https://bugs.webkit.org/show_bug.cgi?id=300624

Reviewed by Alex Christensen.

This PR ensures that non-successful HTTP responses to prefetched resources do not get served from the memory cache, by removing them as part of notifyFinished.

* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/no-http-cache-interference.https-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/prefetch-status.https_status=400&should_prefetch=false-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/prefetch-status.https_status=500&should_prefetch=false-expected.txt: Progression.
* Source/WebCore/loader/DocumentPrefetcher.cpp:
(WebCore::DocumentPrefetcher::notifyFinished): Remove non-successful responses from the memory cache.

Canonical link: https://commits.webkit.org/302649@main